# D-PoSE

./: .gitignore  Dockerfile  README.md  WEBCAM_USAGE.md  check_webcam_syntax.py  compare_improvements.py  demo.py  demo_webcam.py  docker commands  docker-compose.yaml  download_body_models.sh  improvements_summary.txt  part-segm.json  requirements.txt  ros_demo_webcam.py  ros_demo_webcam.py.backup  run_dpose.sh  setup_ros.sh  train.py
aruco/: aruco_create.py
configs/: dpose_conf.yaml
ros2_ws/src/skeleton_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/skeleton_msgs/msg/: HumanSkeletonHistory.msg  Skeleton.msg  Skeletons.msg
train/core/: config.py  hmr_trainer.py  tester.py
train/dataset/: dataset.py
train/losses/: losses.py
train/models/: hmr.py
train/models/backbone/: hrnet.py
train/models/head/: keypoint_attention.py  refit_regressor.py  unet_advanced.py
train/utils/: blender.py  demo_utils.py  depth_utils.py  image_utils.py  one_euro_filter.py  renderer_pyrd.py  train_utils.py
